--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="port">Server Port:</string>
     <string name="secret">Shared Secret:</string>
     <string name="connect">Connect!</string>
+    <string name="disconnect">Disconnect!</string>
 
     <string name="connecting">ToyVPN is connecting…</string>
     <string name="connected">ToyVPN is connected!</string>
